--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bad-words": "^3.0.4",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.6.0",
+    "compromise": "^13.11.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
